--- a/setup.cfg
+++ b/setup.cfg
@@ -6,5 +6,7 @@ exclude =
     venv/,
     env/
 per-file-ignores =
-    */settings.py:E501
+    */settings.py:
+        E501,
+        W293
 max-complexity = 10
