--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,6 @@ djangorestframework==3.13.1
 django-filter==22.1
 djangorestframework-simplejwt==4.8
 djoser==2.1.0
+python-dotenv==0.21.0
 psycopg2-binary==2.9.3
+gunicorn==20.1.0
