--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,10 +1,15 @@
 server {
     listen 80;
+	
+	server_name localhost;
+	
+	server_tokens off;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    location / {
+	location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
@@ -17,5 +22,16 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
+	location /static/admin/ {
+        root /var/html/;
+    }
+    location /media/ {
+        root /var/html/;
+    }
+	location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+	location /api/ {
+        proxy_pass http://backend:8000/api/;
+    }
 }
