--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,4 +8,4 @@ RUN apt-get install gcc -y
 RUN python3 -m pip install --upgrade pip
 RUN pip3 install -r ./requirements.txt --no-cache-dir
 COPY foodgram/ ./
-CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
+CMD python3 manage.py migrate ; python3 manage.py collectstatic --no-input ; gunicorn foodgram.wsgi:application --bind 0:8000
