--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -25,6 +25,9 @@ server {
 	location /static/admin/ {
         root /var/html/;
     }
+	location /static/colorfield/ {
+        root /var/html/;
+    }
     location /media/ {
         root /var/html/;
     }
