--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
   backend:
-    build: ../backend
+    image: tomatoinoil/foodgram_backend:latest
     restart: always
     volumes:
       - static_value:/app/static/
