--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,12 @@
 server {
-    listen 80;
-	
-	server_name localhost;
-	
+    listen 443 ssl;
+	server_name tomatoinoilfoodgram.ddns.net;
 	server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/tomatoinoilfoodgram.ddns.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tomatoinoilfoodgram.ddns.net/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -22,14 +25,11 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-	location /static/admin/ {
-        root /var/html/;
-    }
-	location /static/colorfield/ {
-        root /var/html/;
+	location /static/ {
+        root /var/html/static/;
     }
     location /media/ {
-        root /var/html/;
+        root /var/html/media/;
     }
 	location /admin/ {
         proxy_pass http://backend:8000/admin/;
@@ -37,4 +37,16 @@ server {
 	location /api/ {
         proxy_pass http://backend:8000/api/;
     }
+}
+
+server {
+    listen 80;
+    server_name tomatoinoilfoodgram.ddns.net;
+    
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    location / {
+        return 301 https://$host$request_uri;
+    }    
 }
