--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -12,7 +12,22 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-	location / {
+    location /static/admin/ {
+        root /var/html/;
+    }
+    location /static/colorfield/ {
+        root /var/html/;
+    }
+    location /media/ {
+        root /var/html/;
+    }
+	location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+	location /api/ {
+        proxy_pass http://backend:8000/api/;
+    }
+    location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
@@ -25,18 +40,6 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-	location /static/ {
-        root /var/html/static/;
-    }
-    location /media/ {
-        root /var/html/media/;
-    }
-	location /admin/ {
-        proxy_pass http://backend:8000/admin/;
-    }
-	location /api/ {
-        proxy_pass http://backend:8000/api/;
-    }
 }
 
 server {
