--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -51,7 +51,7 @@ jobs:
             tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs: build_backend_and_push_to_docker_hub
     if: github.ref == 'refs/heads/master'
     steps:
@@ -65,7 +65,7 @@ jobs:
           script: |
             cd infra/
             docker-compose stop
-            docker-compose rm backend
+            docker-compose rm backend -f
             docker image rm ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
             echo SECRET_KEY=${{ secrets.SECRET_KEY }} > .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
